# fastapi-users

./: .env  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 56a7aefeaa87_create_tables.py
scripts/: run-migrations.sh
src/: config.py  database.py  main.py
src/users/: models.py  repositories.py  repository.py  schemas.py
tests/: conftest.py
tests/users/: test_create_user.py  test_create_user_db.py
