[tool.poetry]
name = "fastapi-users"
version = "0.1.0"
description = ""
authors = ["eltonjncorreia <eltonjncorreia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.28.0"
sqlmodel = "^0.0.8"
uvicorn = "^0.23.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
