[tool.poetry]
name = "fastapi-users"
version = "0.1.0"
description = ""
authors = ["eltonjncorreia <eltonjncorreia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.28.0"
uvicorn = "^0.23.2"
pydantic = {extras = ["email"], version = "^2.4.2"}
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.22"
alembic = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.5.0"
httpx = "^0.25.0"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
pythonpath = "."

[tool.isort]
force_single_line = true
ensure_newline_before_comments = true
line_length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
